--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -40,9 +40,10 @@
 
 
 
-
-<a href="/administration/classes" class="btn btn-secondary">Abbrechen</a>
-<button type="submit" class="btn btn-primary">Änderungen speichern</button>
+<div class="modal-footer mt-1">
+    <a href="/administration/classes" class="btn btn-secondary">Abbrechen</a>
+    <button type="submit" class="btn btn-primary">Änderungen speichern</button>
+</div>
 
 <hr class="my-2"/>
 
