--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -60,7 +60,7 @@
                     <h5>Einwilligungen: {{{consentStatusIcon}}}</h5>
                     <div class="row" id="consents-overview">
                         <div class="col-md-6">
-                            <h6>Eltern</h6>
+                            <b>Eltern</b><br/>
                             <input name="parent_consentId" type="hidden" value="{{consent.parentConsent._id}}" disabled/>
 
                             <label><input name="parent_form" value="analog" type="radio" disabled {{#ifeq consent.parentConsent.form 'analog'}}checked{{/ifeq}}/> Analog</label>
@@ -72,7 +72,7 @@
                             <label><input name="parent_termsOfUseConsent" type="checkbox" value="true" disabled {{#if consent.parentConsent.termsOfUseConsent}}checked{{/if}}/> Nutzung</label><br/>
                         </div>
                         <div class="col-md-6">
-                            <h6>Schüler</h6>
+                            <b>Schüler</b><br/>
                             <input name="student_consentId" type="hidden" value="{{consent._id}}" disabled/>
 
                             <label><input name="student_form" value="analog" type="radio" disabled {{#ifeq consent.userConsent.form 'analog'}}checked{{/ifeq}}/> Analog</label>
