small reformats in all reg/firstlogin dialogs

--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -16,18 +16,16 @@
         <h4>Herzlich Willkommen in der {{theme.short_title}}, {{currentUser.firstName}} {{currentUser.lastName}} </h4>
         <p>
             Wir freuen uns, dass du die {{theme.title}} nutzen möchtest und mithilfst, gemeinsam den nächsten Schritt zur digitalen Unterstützung des Unterrichts zu gehen – Open Source, gemeinnützig und datenschutzkonform.
-            Bitte überprüfe in den kommenden Schritten die für dich angegebene E-Mail-Adresse und stimme den Nutzungsbedingungen zu. Ein Erziehungsberechtigter hat der Nutzung bereits zugestimmt, jetzt bist du gefragt. Ändere anschließend dein Startpasswort, damit du die Vorteile der {{theme.title}} nutzen kannst.
+            Bitte überprüfe in den kommenden Schritten die für dich angegebene E-Mail-Adresse und stimme den Nutzungsbedingungen zu. Ein Erziehungsberechtigter hat der Nutzung bereits zugestimmt, jetzt bist du gefragt. Ändere anschließend dein Startpasswort, damit du die Vorteile der {{theme.short_title}} nutzen kannst.
         </p>
-        <p>
-            Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄
-        </p>
+        <p class="mt-2 explanation">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄 </p>
       </section>
 
 
       <section data-panel="section-2">
         <h4>Einwilligungserklärung</h4>
         <p>
-            Du bist älter als 13 Jahre. Bitte bestätige folgende Einwilligungserklärungen, damit du die {{theme.short_title}} nutzen kannst.
+            Du bist mindestens 14 Jahre alt. Bitte bestätige folgende Einwilligungserklärungen, damit du die {{theme.title}} nutzen kannst.
         </p>
         <p>
             Ich, <b>{{currentUser.firstName}} {{currentUser.lastName}}</b>, erkläre folgendes:
@@ -54,7 +52,7 @@
             <span>Ich habe die <a href=" "  target="_blank">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein.</span>
         </label>
         <p class="explanation">
-            Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der {{theme.short_title}}.
+            Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der {{theme.title}}.
         </p>
 
         <label>
@@ -113,7 +111,7 @@
 
       <section data-panel="section-5">
           <h4>Fertig!</h4>
-          <p>Du kannst jetzt mit der Benutzung der {{theme.title}} starten.</p>
+          <p>Du kannst jetzt mit der Benutzung der {{theme.short_title}} starten.</p>
           <a class="btn btn-primary mt-2" href="//schul-cloud.org">{{theme.short_title}} erkunden</a>
       </section>
       {{/content}}
