--- a/views/firstLogin/firstLoginExistingUserUE14.hbs
+++ b/views/firstLogin/firstLoginExistingUserUE14.hbs
@@ -12,7 +12,7 @@
       {{#content "panels"}}
       <section data-panel="section-1">
         <h4>Einwilligungserklärung</h4>
-        <p>Du bist älter als 14 Jahre. Deine Erziehungsberechtigten (oder du selbst, wenn du schon über 18 bist) haben der Nutzung bereits auf dem Papierweg zugestimmt. Bitte bestätige jetzt folgende Einwilligungserklärungen, damit du die {{theme.short_title}} weiter nutzen kannst.</p>
+        <p>Du bist mindestens 14 Jahre alt. Deine Erziehungsberechtigten (oder du selbst, wenn du schon über 18 bist) haben der Nutzung bereits auf dem Papierweg zugestimmt. Bitte bestätige jetzt folgende Einwilligungserklärungen, damit du die {{theme.title}} weiter nutzen kannst.</p>
 
           <p>Ich, <b>{{currentUser.firstName}} {{currentUser.lastName}}</b>, erkläre Folgendes:</p>
 
@@ -32,7 +32,7 @@
               <input name="Pseudonymisierung" type="checkbox" value="true" required/>
               <span> Ich habe die <a href="#" target="_blank">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein</span>
           </label>
-          <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der {{theme.short_title}}. </p>
+          <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der {{theme.title}}. </p>
 
           <label>
               <input name="Nutzungsbedingungen" type="checkbox" value="Nutzungsbedingungen" required/>
@@ -56,7 +56,7 @@
 
       <section data-panel="section-3">
         <h4>Danke!</h4>
-        <p>Du kannst jetzt mit der Benutzung der {{theme.title}} fortfahren.<br>
+        <p>Du kannst jetzt mit der Benutzung der {{theme.short_title}} fortfahren.<br>
             <a class="btn btn-primary mt-2" href="//schul-cloud.org">{{theme.short_title}} erkunden</a>
         </p>
       </section>
