--- a/views/firstLogin/firstLoginExistingGeb14.hbs
+++ b/views/firstLogin/firstLoginExistingGeb14.hbs
@@ -14,12 +14,12 @@
       {{#content "panels"}}
       <section data-panel="section-1" class="confetti-wrapper">
         <h4>Herzlichen Glückwunsch, {{currentUser.firstName}} {{currentUser.lastName}}! 🎉🎈</h4>
-        <p>Du bist jetzt 14 Jahre alt. Bitte erkläre im folgenden Schritt dein Einverständnis zur Nutzung der {{theme.short_title}}. Ab 14 Jahren ist dies zusätzlich zum bereits erklärten Einverständnis deiner Eltern nötig, damit du die {{theme.short_title}} weiter nutzen kannst.</p>
+        <p>Du bist jetzt 14 Jahre alt. Bitte erkläre im folgenden Schritt dein Einverständnis zur Nutzung der {{theme.title}}. Ab 14 Jahren ist dies zusätzlich zum bereits erklärten Einverständnis deiner Eltern nötig, damit du die {{theme.short_title}} weiter nutzen kannst.</p>
       </section>
 
       <section data-panel="section-2" class="submit-page">
         <h4>Einwilligungserklärung</h4>
-        <p>Bitte bestätige jetzt folgende Einwilligungserklärungen, damit du die {{theme.short_title}} weiter nutzen kannst.</p>
+        <p>Bitte bestätige jetzt folgende Einwilligungserklärungen, damit du die {{theme.title}} weiter nutzen kannst.</p>
 
           <p>Ich, <b>{{currentUser.firstName}} {{currentUser.lastName}}</b>, erkläre Folgendes:</p>
 
@@ -39,7 +39,7 @@
               <input name="Pseudonymisierung" type="checkbox" value="true" required/>
               <span> Ich habe die <a href="#" target="_blank">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein</span>
           </label>
-          <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der {{theme.short_title}}. </p>
+          <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der {{theme.title}}. </p>
 
           <label>
               <input name="Nutzungsbedingungen" type="checkbox" value="Nutzungsbedingungen" required/>
@@ -50,7 +50,7 @@
 
       <section data-panel="section-3">
         <h4>Danke!</h4>
-        <p>Du kannst jetzt mit der Benutzung der {{theme.title}} fortfahren.<br>
+        <p>Du kannst jetzt mit der Benutzung der {{theme.short_title}} fortfahren.<br>
             <a class="btn btn-primary mt-2" href="/">{{theme.short_title}} erkunden</a>
         </p>
       </section>
