--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -28,7 +28,7 @@
             <p><strong>Achtung:</strong> Die folgende Anmeldung muss von dir als Schüler selbst vorgenommen werden, nicht von deinen Eltern.</p>
         </div>
       <button id="showRegistrationForm" class="btn btn-primary" disabled>Weiter</button>
-        <p class="mt-2 explanation">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir die männliche Form. Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ‍🌈🎉🦄</p>
+        <p class="mt-2 explanation">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄 </p>
         <input type="hidden" name="classId" value="{{classId}}" />
     </div>
   {{/content}}
