Consent checkboxed for parent consent now disabled if student older than 18

--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -39,7 +39,7 @@
                 {{#unless isTeacher}}
                     <div class="form-group">
                         <label>Geburtsdatum: *</label>
-                        <input class="form-control linked" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" name="birthday" type="text" required autocomplete="off" value="{{dateToPicker user.birthday}}"/>
+                        <input class="form-control linked" id="birthday" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" name="birthday" type="text" required autocomplete="off" value="{{dateToPicker user.birthday}}"/>
                     </div>
 
                     <div class="row">
