--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -13,7 +13,7 @@
       {{#content "panels"}}
       <section data-panel="section-1">
         <h4>Persönliche Daten</h4>
-        <p>Die {{theme.short_title}} bewahrt die Daten der Nutzer*Innen sicher auf und gibt sie nicht an Dritte weiter. Die Verarbeitung der Daten erfolgt entsprechend der hohen gesetzlichen Datenschutz-Anforderungen.</p>
+        <p>Die {{theme.short_title}} bewahrt die Nutzerdaten sicher auf und gibt sie nicht an Dritte weiter. Die Verarbeitung der Daten erfolgt entsprechend der hohen gesetzlichen Datenschutz-Anforderungen.</p>
         <p>Für die Nutzung der {{theme.short_title}} benötigen wir folgende Angaben:</p>
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
@@ -60,30 +60,8 @@
         <h4>Einwilligungserklärung</h4>
         <p>Bitte bestätige folgende Einwilligungserklärungen, damit du die {{theme.short_title}} nutzen kannst.</p>
         <p>Ich, <b data-from="student-firstname"></b> <b data-from="student-secondname"></b>, erkläre Folgendes:</p>
-        <label>
-            <input name="Erhebung" type="checkbox" value="true" required/>
-            <span>Ich habe die <a href="#">Datenschutzerklärung</a> gelesen und willige in die Verarbeitung der Nutzerdaten ein.</span>
-        </label>
-        <p class="explanation">Schülereinwilligung Ü18</p>
+          {{#embed "registration/forms/einwilligungserklaerung"}}{{/embed}}
 
-        <label>
-            <input name="Forschung" type="checkbox" value="true" required/>
-            <span>Ich habe die <a href="#">Informationen zum Forschungsvorhaben</a> gelesen und willige in die wissenschaftliche Auswertung ein.</span>
-        </label>
-        <p class="explanation">Die {{theme.title}} wird von einem wissenschaftlichen Forschungsprojekt begleitet, das der Optimierung des Lernerlebnisses in der {{theme.short_title}} dient. Im Rahmen dessen werden Nutzungsdaten anonymisiert ausgewertet.</p>
-
-        <label>
-            <input name="Pseudonymisierung" type="checkbox" value="true" required/>
-            <span> Ich habe die <a href="#">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein</span>
-        </label>
-        <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der {{theme.short_title}}. </p>
-
-        <label>
-            <input name="Nutzungsbedingungen" type="checkbox" value="Nutzungsbedingungen" required/>
-            <span>Ich habe die <a href="#">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
-        </label>
-
-        <p>Die Nutzung der {{theme.short_title}} ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes {{theme.short_title}}-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-clud.org</a></p>
       </section>
 
 
