[WIP] bug fixes and refactoring

--- a/views/content/create.hbs
+++ b/views/content/create.hbs
@@ -13,7 +13,7 @@
 
       <h1>Materialien in der Schul-Cloud</h1>
 
-      <div id="app">
+      <div data-user-id="{{ ../currentUser._id }}" id="app">
       </div>
 
     {{/content}}
