--- a/views/content/my-content.hbs
+++ b/views/content/my-content.hbs
@@ -10,7 +10,7 @@
     {{/content}}
 
     {{#content "page"}}
-        <div id="app">
+        <div id="app" data-user-id="{{ ../currentUser._id }}">
         </div>
 
     {{/content}}
