--- a/views/content/review-content.hbs
+++ b/views/content/review-content.hbs
@@ -11,7 +11,7 @@
 
     {{#content "page"}}
 
-      <div id="app">
+      <div data-user-id="{{ ../currentUser._id }}" id="app">
       </div>
 
     {{/content}}
