--- a/views/content/review.hbs
+++ b/views/content/review.hbs
@@ -10,7 +10,7 @@
     {{/content}}
 
     {{#content "page"}}
-      <div id="app">
+      <div data-user-id="{{ ../currentUser._id }}" id="app">
       </div>
 
     {{/content}}
