--- a/static/vue-components/default.scss
+++ b/static/vue-components/default.scss
@@ -14,4 +14,10 @@
 //     color: #373a3c;
 // }
 
+.stepper-card {
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  border: 2px solid #9e9e9e
+}
+
 @import "~vue-material/dist/theme/all"; // Apply the theme
