--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -96,7 +96,7 @@
           <p>Du kannst dich jetzt in der Schul-Cloud anmelden. Beim ersten Login muss ein neues Passwort gewählt werden.</p>
         </div>
 
-        <a class="btn btn-primary" href="//schul-cloud.org/login">Login öffnen</a>
+        <a class="btn btn-primary" href="/login">Login öffnen</a>
       </section>
       {{/content}}
     {{/embed}}
