remove userdata email after firstlogin

--- a/views/firstLogin/firstLoginU14.hbs
+++ b/views/firstLogin/firstLoginU14.hbs
@@ -54,10 +54,10 @@
           </div>
         </div>
 
-        <label>
+        <!--<label>
             <input name="sendCredentials" type="checkbox" value="sendCredentials"/>
             Login-Daten per Mail an mich senden
-        </label>
+        </label>-->
       </section>
 
       <section data-panel="section-4">
