--- a/views/firstLogin/firstLoginUE18.hbs
+++ b/views/firstLogin/firstLoginUE18.hbs
@@ -41,10 +41,10 @@
           </div>
         </div>
 
-        <label>
-          <input name="sendCredentials" type="checkbox" value="sendCredentials"/>
-          Login-Daten per Mail an mich senden
-        </label>
+          <!--<label>
+              <input name="sendCredentials" type="checkbox" value="sendCredentials"/>
+              Login-Daten per Mail an mich senden
+          </label>-->
       </section>
 
       <section data-panel="section-3">
