handle schoolIds in registration

--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -52,7 +52,7 @@
         </div>
         <p class="explanation">Erhebung erfolgt für Forschung und Optimierung.</p>
 
-        <input type="hidden" name="classId" value="{{classId}}" />
+        <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
       </section>
 
 
