--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -7,9 +7,7 @@
     <p>Ab Mai 2018 beginnt die zweite Pilotphase, in der die Erprobung der Schul-Cloud auf alle über 300 MINT-EC Schulen ausgeweitet
         wird. Um die Schul-Cloud als MINT-EC Schule testen zu können, ist lediglich eine online Bewerbung erforderlich. Diese
         finden Sie auf der <a href="https://www.mint-ec.de/veranstaltungen/849-schul-cloud-teilnahme-an-der-zweiten-pilotphase/" target="_blank">Website des MINT-EC</a>. Dort können Sie ebenfalls erforderliche technische Rahmenbedingungen und weitere Informationen
-        bezüglich der Nutzung der Schul-Cloud einsehen. Bei Fragen wenden Sie sich gerne an den Projektkoordinator des MINT-EC,
-        Nils Karn (
-        <a href="mailto:karn@mint-ec.de">karn@mint-ec.de</a>). </p>
+        bezüglich der Nutzung der Schul-Cloud einsehen. Bei Fragen wenden Sie sich gerne an das Schul-Cloud Team des MINT-EC (<a href="mailto:schul-cloud@mint-ec.de">schul-cloud@mint-ec.de</a>). </p>
 
     <h5>Können auch nicht MINT-EC Schulen die Schul-Cloud erproben?</h5>
 
@@ -26,6 +24,7 @@
             <li>- Anzahl der vorhandenen mobilen und webfähigen Endgeräte (Laptops, Tablets, etc.) oder ob der Bring-Your-Own-Device
                 als Ansatz aktiv eingesetzt wird</li>
     </p>
+    <p>Gerne können Sie außerdem <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/flyer/Schul-Cloud_Technische_Vorbereitungen.pdf" target="_blank">hier</a> einsehen, welche Hinweise bei der Vorbereitung auf eine mögliche Schul-Cloud Nutzung helfen können.</p>
     <br />
     <h3>Landesinitiativen</h3>
 
@@ -34,10 +33,9 @@
         mit einer individualisierten Oberfläche nutzen. Die Kooperation ermöglicht einen engen Erfahrungsaustausch, von dem
         beide Seiten profitieren werden. Zudem wird erprobt, wie die Schul-Cloud länderspezifisch und schulformübergreifend
         effizient eingesetzt werden kann. Weitere Informationen zu der Kooperation mit der niedersächsischen Bildungscloud
-        können Sie <a href="https://hpi.de/pressemitteilungen/2018/digitalisierung-niedersaechsische-bildungscloud-und-bundesweite-schul-cloud-starten-kooperation-auf-der-didacta.html">hier</a>
-        einsehen. Wenn Sie als Landesinitiative Interesse daran haben, mit der Schul-Cloud zu kooperieren, wenden Sie sich gerne
-        an
-        <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>. </p>
+        können Sie <a href="https://hpi.de/pressemitteilungen/2018/digitalisierung-niedersaechsische-bildungscloud-und-bundesweite-schul-cloud-starten-kooperation-auf-der-didacta.html" target="_blank">hier</a> einsehen. 
+        Wenn Sie als Landesinitiative Interesse daran haben, mit der Schul-Cloud zu kooperieren, wenden Sie sich gerne
+        an <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>. </p>
     <br />
     <h3>Inhalteanbieter</h3>
 
