optimize user registration, fix teacher registration

--- a/views/administration/forms/form-teachers.hbs
+++ b/views/administration/forms/form-teachers.hbs
@@ -16,3 +16,8 @@
     <label>E-Mail-Adresse</label>
     <input class="form-control" name="email" type="text" placeholder="test@test.org" required />
 </div>
+
+<label>
+    <input name="sendRegistration" type="checkbox" value="sendRegistration"/>
+    Registrierungslink an Lehrer senden
+</label>
