fix teacher registration and import

--- a/views/administration/forms/form-import.hbs
+++ b/views/administration/forms/form-import.hbs
@@ -20,8 +20,11 @@
 
 <div class="form-group">
     <p>Falls Sie ihr derzeitiges System nicht in der Liste unterstützter Systeme finden, wählen Sie bitte "Anderes".
-        <br>Die ausgewählte .csv Datei sollte dann nach folgendem Schema aufgebaut sein:<br>
+        <br><br>
+        <strong>Struktur der .csv:</strong><br>
+        Die ausgewählte .csv Datei sollte dann nach folgendem Schema aufgebaut sein:<br>
         <img src="/images/csv_example.png" />
         <br>
-        Als Trennzeichen muss "," verwendet werden.</p>
+        Die Kopfzeile "firstName,lastName,email" muss auch die erste Zeile der .csv Datei sein. Als Trennzeichen muss , (Komma) verwendet werden.
+    </p>
 </div>
