--- a/static/styles/administration/dataprivacy.scss
+++ b/static/styles/administration/dataprivacy.scss
@@ -42,6 +42,9 @@
     margin-left: 18px;
     font-size: .85em;
 }
+.explanation.nomargin{
+    margin-left: 0px;
+}
 
 label{
     margin-bottom: 0px;
