--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -35,7 +35,7 @@
           <label>E-Mail-Adresse des Schülers: * <small>(Schüler benötigen eine eigene E-Mail-Adresse)</small></label>
           <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required />
         </div>
-        <p class="explanation">
+        <p class="explanation nomargin">
           Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
         </p>
 
@@ -50,7 +50,7 @@
             </select>
           </div>
         </div>
-        <p class="explanation">Erhebung erfolgt für Forschung und Optimierung.</p>
+        <p class="explanation nomargin">Erhebung erfolgt für Forschung und Optimierung.</p>
 
         <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
       </section>
