--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -35,8 +35,8 @@
             <label>E-Mail-Adresse: *</label>
             <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required>
         </div>
-        <p class="explanation">
-            Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
+        <p class="explanation nomargin">
+            Die E-Mail-Adresse wird für die Nutzung der Schul-Cloud benötigt, die sie von viele Funktionen gebraucht wird.
         </p>
 
         <div class="row">
@@ -50,7 +50,7 @@
             </select>
           </div>
         </div>
-        <p class="explanation">Die Erhebung erfolgt für Forschung und Optimierung.</p>
+        <p class="explanation nomargin">Die Erhebung erfolgt für Forschung und Optimierung.</p>
 
         <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
       </section>
