--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -36,7 +36,7 @@
             <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required>
         </div>
         <p class="explanation nomargin">
-            Die E-Mail-Adresse wird für die Nutzung der Schul-Cloud benötigt, die sie von viele Funktionen gebraucht wird.
+            Die E-Mail-Adresse wird für die Nutzung der Schul-Cloud benötigt, da sie von vielen Funktionen gebraucht wird.
         </p>
 
         <div class="row">
