--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -161,6 +161,9 @@
                                         <li class="list-group-item list-group-item-action"><span><i class="fa fa-comments-o"
                                                                                                     aria-hidden="true"></i><a
                                                 href="https://blog.schul-cloud.org/faq/" target="_blank" class="link">FAQ</a></span></li>
+                                        <li id="intro-loggedin" class="list-group-item list-group-item-action"><span><i class="fa fa-map-signs"
+                                                                                                    aria-hidden="true"></i><a
+                                                href="#" class="link">Intro</a></span></li>
                                         <div class="delimiter"></div>
                                         {{#ifneq this.currentRole "Schüler"}}
                                         <li class="list-group-item list-group-item-action"><span><i class="fa fa-pencil"
