fix registration texts

--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -18,11 +18,11 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: *</label>
-            <input class="form-control linked" name="student-firstname" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise eingeben, keine Spitznamen o.ä." required/>
+            <input class="form-control linked" name="student-firstname" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise, keine Spitznamen" required/>
           </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Nachname: *</label>
-            <input class="form-control linked" name="student-secondname" type="text" placeholder="Nachname des Kindes hier eingeben" required/>
+            <input class="form-control linked" name="student-secondname" type="text" placeholder="Nachname des Kindes" required/>
           </div>
         </div>
 
@@ -36,7 +36,8 @@
           <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required />
         </div>
         <p class="explanation nomargin">
-          Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
+            Wir benötigen eine E-Mail-Adresse, damit Ihre Einwilligung in die Nutzung der Schul-Cloud rechtlich gültig ist. Die Schul-Cloud gibt die Adresse nicht weiter. Sie erhalten keine unerwünschten Mails.
+            Zusätzlich planen wir die Entwicklung eines Eltern-Zugangs, über den Sie mit dem Klassenlehrer kommunizieren und mit dem Sie die Lernfortschritte Ihres Kindes nachvollziehen können. Sobald diese Funktionen zur Verfügung stehen, fragen wir Sie, ob wir Ihre E-Mail-Adresse dafür verwenden dürfen.
         </p>
 
         <div class="row">
