--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -18,11 +18,11 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
               <label>Vorname: *</label>
-              <input class="form-control linked" name="student-firstname" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise eingeben, keine Spitznamen o.ä." required/>
+              <input class="form-control linked" name="student-firstname" type="text" placeholder="Dein offizieller Vorname, kein Spitzname" required/>
           </div>
           <div class="form-group col-md-6 col-sm-12">
               <label>Nachname: *</label>
-              <input class="form-control linked" name="student-secondname" type="text" placeholder="Nachname des Kindes hier eingeben" required/>
+              <input class="form-control linked" name="student-secondname" type="text" placeholder="Dein offizieller Nachname" required/>
           </div>
         </div>
 
@@ -36,7 +36,7 @@
             <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required>
         </div>
         <p class="explanation nomargin">
-            Die E-Mail-Adresse wird für die Nutzung der Schul-Cloud benötigt, da sie von vielen Funktionen gebraucht wird.
+            Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
         </p>
 
         <div class="row">
