--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -30,6 +30,7 @@
       <button id="showRegistrationForm" class="btn btn-primary" style="margin-top:6px;" disabled>Weiter</button>
         <p class="mt-2 explanation nomargin">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄 </p>
         <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
+        <input type="hidden" name="sso" value="{{soo}}" />
     </div>
   {{/content}}
 {{/extend}}
