--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -36,8 +36,7 @@
           <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required />
         </div>
         <p class="explanation nomargin">
-            Wir benötigen eine E-Mail-Adresse, damit Ihre Einwilligung in die Nutzung der Schul-Cloud rechtlich gültig ist. Die Schul-Cloud gibt die Adresse nicht weiter. Sie erhalten keine unerwünschten Mails.
-            Zusätzlich planen wir die Entwicklung eines Eltern-Zugangs, über den Sie mit dem Klassenlehrer kommunizieren und mit dem Sie die Lernfortschritte Ihres Kindes nachvollziehen können. Sobald diese Funktionen zur Verfügung stehen, fragen wir Sie, ob wir Ihre E-Mail-Adresse dafür verwenden dürfen.
+            Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
         </p>
 
         <div class="row">
@@ -54,6 +53,7 @@
         <p class="explanation nomargin">Erhebung erfolgt für Forschung und Optimierung.</p>
 
         <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
+        <input type="hidden" name="sso" value="{{sso}}" />
       </section>
 
 
@@ -77,7 +77,7 @@
           <label>Ihre E-Mail-Adresse * <small>(Darf nicht gleich der E-Mail-Adresse Ihres Kindes sein)</small></label>
           <input class="form-control" type="email" name="parent-email" required placeholder="eltern@schul-cloud.org" autocomplete></input>
         </div>
-        <p class="explanation">
+        <p class="explanation nomargin">
           Wir benötigen eine E-Mail-Adresse, damit Ihre Einwilligung in die Nutzung der {{theme.short_title}} rechtlich gültig ist. Die {{theme.short_title}} gibt die Adresse nicht weiter. Sie erhalten keine unerwünschten Mails.
           <br/>
           Zusätzlich planen wir die Entwicklung eines Eltern-Zugangs, über den Sie mit dem Klassenlehrer kommunizieren und mit dem Sie die Lernfortschritte Ihres Kindes nachvollziehen können. Sobald diese Funktionen zur Verfügung stehen, fragen wir Sie, ob wir Ihre E-Mail-Adresse dafür verwenden dürfen.
