--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -53,6 +53,7 @@
         <p class="explanation nomargin">Die Erhebung erfolgt für Forschung und Optimierung.</p>
 
         <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
+        <input type="hidden" name="sso" value="{{sso}}" />
       </section>
 
 
