fix sso registration and start firstlogin fix

--- a/views/firstLogin/firstLoginUE18.hbs
+++ b/views/firstLogin/firstLoginUE18.hbs
@@ -15,7 +15,7 @@
         <h4>Herzlich Willkommen in der {{theme.title}}, {{currentUser.firstName}} {{currentUser.lastName}}</h4>
         <p>Wir freuen uns, dass du die {{theme.short_title}} nutzen möchtest.</p>
         <p>Bitte ändere im nächsten Schritt dein Startpasswort, damit du mit der Benutzung der {{theme.short_title}} starten kannst.</p>
-        <p class="mt-2 explanation">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄 </p>
+        <p class="mt-2 explanation nomargin">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄 </p>
       </section>
 
       <section data-panel="section-2" class="submit-page">
