--- a/views/firstLogin/firstLoginExistingUserU14.hbs
+++ b/views/firstLogin/firstLoginExistingUserU14.hbs
@@ -25,7 +25,7 @@
           <section data-panel="section-2">
               <h4>Danke!</h4>
               <p>Du kannst jetzt mit der Benutzung der {{theme.short_title}} fortfahren.<br>
-                  <a class="btn btn-primary mt-2" href="//schul-cloud.org">{{theme.short_title}} erkunden</a>
+                  <a class="btn btn-primary mt-2" href="/">{{theme.short_title}} erkunden</a>
               </p>
           </section>
       {{/content}}
