--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -78,7 +78,7 @@
       <section data-panel="section-5">
           <h4>Fertig!</h4>
           <p>Du kannst jetzt mit der Benutzung der {{theme.short_title}} starten.</p>
-          <a class="btn btn-primary mt-2" href="//schul-cloud.org">{{theme.short_title}} erkunden</a>
+          <a class="btn btn-primary mt-2" href="/login">{{theme.short_title}} erkunden</a>
       </section>
       {{/content}}
     {{/embed}}
