--- a/views/firstLogin/firstLoginExistingUserUE14.hbs
+++ b/views/firstLogin/firstLoginExistingUserUE14.hbs
@@ -34,7 +34,7 @@
       <section data-panel="section-3">
         <h4>Danke!</h4>
         <p>Du kannst jetzt mit der Benutzung der {{theme.short_title}} fortfahren.<br>
-            <a class="btn btn-primary mt-2" href="//schul-cloud.org">{{theme.short_title}} erkunden</a>
+            <a class="btn btn-primary mt-2" href="/login">{{theme.short_title}} erkunden</a>
         </p>
       </section>
       {{/content}}
