--- a/views/firstLogin/firstLoginU14.hbs
+++ b/views/firstLogin/firstLoginU14.hbs
@@ -63,7 +63,7 @@
       <section data-panel="section-4">
         <h4>Fertig!</h4>
         <p>Du kannst jetzt mit der Benutzung der HPI {{theme.short_title}} starten.</p>
-        <a class="btn btn-primary mt-2" href="//schul-cloud.org">{{theme.short_title}} erkunden</a>
+        <a class="btn btn-primary mt-2" href="/login">{{theme.short_title}} erkunden</a>
       </section>
       {{/content}}
     {{/embed}}
