--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -15,8 +15,6 @@
                 defer></script>
         <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
 
-        <script type="text/javascript" src="https://unpkg.com/socket.io-client@1.7.3/dist/socket.io.js" defer></script>
-        <script type="text/javascript" src="https://unpkg.com/@feathersjs/client@3.5.1/dist/feathers.js" defer></script>
     {{/content}}
 
     {{#content "body"}}
@@ -251,11 +249,13 @@
                 {{/content}}
             {{/embed}}
 
-            {{#embed "lib/components/modal" class="feature-modal"}}
-                {{#content "body"}}
-                    {{> "lib/forms/form-features"}}
-                {{/content}}
-            {{/embed}}
+            {{#if newFeature}}
+                {{#embed "lib/components/modal" class="feature-modal"}}
+                    {{#content "body"}}
+                        {{> "lib/forms/form-features"}}
+                    {{/content}}
+                {{/embed}}
+            {{/if}}
         </section>
     {{/content}}
 {{/extend}}
