--- a/views/authentication/forms/demo-login.hbs
+++ b/views/authentication/forms/demo-login.hbs
@@ -10,7 +10,7 @@
                 <input type="text" name="type" value="student" hidden>
 
                 <div class="form-group">
-                    <input type="submit" class="btn btn-block btn-primary btn-login" value="als Schüler einloggen" />
+                    <input type="submit" class="btn btn-block btn-primary btn-login" value="als Schüler*In einloggen" />
                 </div>
             </form>
 
@@ -20,7 +20,7 @@
                 <input type="text" name="type" value="teacher" hidden>
 
                 <div class="form-group">
-                    <input type="submit" class="btn btn-block btn-primary btn-login" value="als Lehrer einloggen" />
+                    <input type="submit" class="btn btn-block btn-primary btn-login" value="als Lehrer*In einloggen" />
                 </div>
             </form>
             Wir empfehlen die Nutzung einer aktuellen Version der Browser Chrome, Firefox, Edge oder Safari.
