--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -32,7 +32,8 @@
         <link rel="stylesheet" href="/styles/lib/base.css" />
     {{/block}}
 
-    {{#block "scripts"}}
+    {{#block "scripts"}} 
+        {{#embed "lib/sw-metrix"}}{{/embed}} 
         <script src="/scripts/all.js" type="text/javascript" defer></script>
     {{/block}}
 
