SSO implementation in registration

--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -54,6 +54,7 @@
 
         <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
         <input type="hidden" name="sso" value="{{sso}}" />
+		<input type="hidden" name="account" value="{{account}}" />
       </section>
 
 
