add hash and userid to reg process

--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -32,6 +32,8 @@
         <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
         <input type="hidden" name="sso" value="{{sso}}" />
 	    <input type="hidden" name="account" value="{{account}}" />
+	    <input type="hidden" name="importHash" value="{{importHash}}" />
+	    <input type="hidden" name="userId" value="{{userId}}" />
     </div>
   {{/content}}
 {{/extend}}
