--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -55,6 +55,8 @@
         <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
         <input type="hidden" name="sso" value="{{sso}}" />
 		<input type="hidden" name="account" value="{{account}}" />
+        <input type="hidden" name="importHash" value="{{importHash}}" />
+        <input type="hidden" name="userId" value="{{userId}}" />
       </section>
 
 
