--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -18,11 +18,19 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
               <label>Vorname: *</label>
-              <input class="form-control linked" name="student-firstname" type="text" placeholder="Dein offizieller Vorname, kein Spitzname" required/>
+              {{#if query.firstName}}
+                  <input class="form-control linked" name="student-firstname" type="text" value="{{query.firstName}}" disabled required/>
+              {{else}}
+                  <input class="form-control linked" name="student-firstname" type="text" placeholder="Dein offizieller Vorname, kein Spitzname" required/>
+              {{/if}}
           </div>
           <div class="form-group col-md-6 col-sm-12">
               <label>Nachname: *</label>
-              <input class="form-control linked" name="student-secondname" type="text" placeholder="Dein offizieller Nachname" required/>
+              {{#if query.lastName}}
+                  <input class="form-control linked" name="student-secondname" type="text" value="{{query.lastName}}" disabled required/>
+              {{else}}
+                  <input class="form-control linked" name="student-secondname" type="text" placeholder="Dein offizieller Nachname" required/>
+              {{/if}}
           </div>
         </div>
 
@@ -33,7 +41,11 @@
 
         <div class="form-group">
             <label>E-Mail-Adresse: *</label>
-            <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required>
+            {{#if query.email}}
+                <input class="form-control linked" type="email" name="student-email" value="{{query.email}}" required/>
+            {{else}}
+                <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required>
+            {{/if}}
         </div>
         <p class="explanation nomargin">
             Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
@@ -52,11 +64,12 @@
         </div>
         <p class="explanation nomargin">Die Erhebung erfolgt für Forschung und Optimierung.</p>
 
-        <input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />
-        <input type="hidden" name="sso" value="{{sso}}" />
-        <input type="hidden" name="account" value="{{account}}" />
-        <input type="hidden" name="importHash" value="{{importHash}}" />
-        <input type="hidden" name="userId" value="{{userId}}" />
+        {{#if classOrSchoolId}}<input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />{{/if}}
+        {{#if sso}}<input type="hidden" name="sso" value="{{sso}}" />{{/if}}
+        {{#if account}}<input type="hidden" name="account" value="{{account}}" />{{/if}}
+        {{#if query.importHash}}<input type="hidden" name="importHash" value="{{query.importHash}}" />{{/if}}
+        {{#if query.userId}}<input type="hidden" name="userId" value="{{query.userId}}" />{{/if}}
+        {{#if query.birthday}}<input type="hidden" name="birthday" value="{{query.birthday}}" />{{/if}}
       </section>
 
 
