fix registration dialog stuff

--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -32,8 +32,8 @@
         {{#if classOrSchoolId}}<input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />{{/if}}
         {{#if sso}}<input type="hidden" name="sso" value="{{sso}}" />{{/if}}
         {{#if account}}<input type="hidden" name="account" value="{{account}}" />{{/if}}
-        {{#if query.importHash}}<input type="hidden" name="importHash" value="{{query.importHash}}" />{{/if}}
-        {{#if query.userId}}<input type="hidden" name="userId" value="{{query.userId}}" />{{/if}}
+        {{#if user.importHash}}<input type="hidden" name="importHash" value="{{user.importHash}}" />{{/if}}
+        {{#if user.userId}}<input type="hidden" name="userId" value="{{user.userId}}" />{{/if}}
         {{#if user.firstName}}<input type="hidden" name="firstName" value="{{user.firstName}}" />{{/if}}
         {{#if user.lastName}}<input type="hidden" name="lastName" value="{{user.lastName}}" />{{/if}}
         {{#if user.email}}<input type="hidden" name="email" value="{{user.email}}" />{{/if}}
