--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -18,11 +18,19 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: *</label>
-            <input class="form-control linked" name="student-firstname" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise, keine Spitznamen" required/>
+              {{#if query.firstName}}
+                  <input class="form-control linked" name="student-firstname" type="text" value="{{query.firstName}}" disabled required/>
+              {{else}}
+                  <input class="form-control linked" name="student-firstname" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise, keine Spitznamen" required/>
+              {{/if}}
           </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Nachname: *</label>
-            <input class="form-control linked" name="student-secondname" type="text" placeholder="Nachname des Kindes" required/>
+              {{#if query.lastName}}
+                  <input class="form-control linked" name="student-secondname" type="text" value="{{query.lastName}}" disabled required/>
+              {{else}}
+                  <input class="form-control linked" name="student-secondname" type="text" placeholder="Nachname des Kindes" required/>
+              {{/if}}
           </div>
         </div>
 
@@ -33,7 +41,11 @@
 
         <div class="form-group">
           <label>E-Mail-Adresse des Schülers: * <small>(Schüler benötigen eine eigene E-Mail-Adresse)</small></label>
-          <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required />
+            {{#if query.email}}
+                <input class="form-control linked" type="email" name="student-email" value="{{query.email}}" required/>
+            {{else}}
+                <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required />
+            {{/if}}
         </div>
         <p class="explanation nomargin">
             Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
