--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -68,6 +68,7 @@
           {{#if sso}}<input type="hidden" name="sso" value="{{sso}}" />{{/if}}
           {{#if account}}<input type="hidden" name="account" value="{{account}}" />{{/if}}
           {{#if query.importHash}}<input type="hidden" name="importHash" value="{{query.importHash}}" />{{/if}}
+          {{#if query.userId}}<input type="hidden" name="userId" value="{{query.userId}}" />{{/if}}
           {{#if query.birthday}}<input type="hidden" name="birthday" value="{{query.birthday}}" />{{/if}}
       </section>
 
