Make birthday optional.

--- a/views/administration/forms/form-students.hbs
+++ b/views/administration/forms/form-students.hbs
@@ -13,13 +13,13 @@
 </div>
 
 <div class="form-group">
-    <label for="create_birthday">Geburtsdatum:</label>
-    <input id="create_birthday" class="form-control" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" name="birthday" type="text" required autocomplete="off"/>
+    <label for="create_email">E-Mail-Adresse:</label>
+    <input id="create_email" class="form-control" name="email" type="email" placeholder="test@test.org" required />
 </div>
 
 <div class="form-group">
-    <label for="create_email">E-Mail-Adresse:</label>
-    <input id="create_email" class="form-control" name="email" type="email" placeholder="test@test.org" required />
+    <label for="create_birthday">Geburtsdatum (optional):</label>
+    <input id="create_birthday" class="form-control" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" name="birthday" type="text" autocomplete="off"/>
 </div>
 
 <label>
