--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -19,7 +19,8 @@
             Bitte überprüfe in den kommenden Schritten die für dich angegebene E-Mail-Adresse und stimme den Nutzungsbedingungen zu. Ein Erziehungsberechtigter hat der Nutzung bereits zugestimmt, jetzt bist du gefragt. Ändere anschließend dein Startpasswort, damit du die Vorteile der {{theme.short_title}} nutzen kannst.
         </p>
         <p class="mt-2 explanation nomargin">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄 </p>
-      </section>
+      {{#if sso}}<input type="hidden" name="sso" value="{{sso}}" />{{/if}}
+	  </section>
 
 
       <section data-panel="section-2">
@@ -48,6 +49,9 @@
 
       <section data-panel="section-4" class="submit-page">
         <h4>Du hast es fast geschafft...</h4>
+		{{#if sso}}
+		  <p>Als Passwort wird weiterhin das von dir bereits genutzte verwendet. </p>
+	    {{else}}
         <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
         <div class="row">
             <div class="form-group col-md-6 col-sm-12">
@@ -73,6 +77,7 @@
             <input name="sendCredentials" type="checkbox" value="sendCredentials"/>
             Login-Daten per Mail an mich senden
         </label>-->
+	   {{/if}}
       </section>
 
       <section data-panel="section-5">
