--- a/views/firstLogin/firstLoginU14.hbs
+++ b/views/firstLogin/firstLoginU14.hbs
@@ -34,7 +34,7 @@
       <section data-panel="section-3" class="submit-page">
 	   <h4>Du hast es fast geschafft...</h4>
 	   {{#if sso}}
-		 <p>Als Passwort wird weiterhin das von dir bereits genutzte verwendet. </p>
+		 <p>Nach klicken des <u>Absenden</u>-Buttons kannst du dich wie gewohnt über das System deiner Schule (Moodle, iServ, ItsLearning etc.) in der {{theme.title}} einloggen. </p>
 	   {{else}}
         <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
         <div class="row">
@@ -66,7 +66,7 @@
 	
      <section data-panel="section-4">
         <h4>Fertig!</h4>
-        <p>Du kannst jetzt mit der Benutzung der HPI {{theme.short_title}} starten.</p>
+        <p>Du kannst jetzt mit der Benutzung der {{theme.title}} starten.</p>
         <a class="btn btn-primary mt-2" href="/login">{{theme.short_title}} erkunden</a>
       </section>
       {{/content}}
