--- a/views/firstLogin/firstLoginUE18.hbs
+++ b/views/firstLogin/firstLoginUE18.hbs
@@ -22,7 +22,7 @@
       <section data-panel="section-2" class="submit-page">
         <h4>Du hast es fast geschafft...</h4>
 		{{#if sso}}
-		 <p>Als Passwort wird weiterhin das von dir bereits genutzte verwendet. </p>
+		 <p>Nach klicken des <u>Absenden</u>-Buttons kannst du dich wie gewohnt über das System deiner Schule (Moodle, iServ, ItsLearning etc.) in der {{theme.title}} einloggen. </p>
 	    {{else}}
         <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
         <div class="row">
@@ -54,7 +54,7 @@
 
       <section data-panel="section-3">
         <h4>Fertig!</h4>
-        <p>Du kannst jetzt mit der Benutzung der {{theme.short_title}} starten.</p>
+        <p>Du kannst jetzt mit der Benutzung der {{theme.title}} starten.</p>
         <a class="btn btn-primary mt-2" href="/login">{{theme.short_title}} erkunden</a>
       </section>
       {{/content}}
