--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -36,7 +36,11 @@
 
         <div class="form-group">
           <label>Geburtsdatum: *</label>
-          <input class="form-control linked" data-date data-min-date="1970/01/01" data-max-date="2000/08/21" data-start-date="1999/01/01" name="student-birthdate" type="text" required autocomplete="off" />
+		  {{#if birthdate}}
+		     <input class="form-control linked" name="birthdateInfo" type="text" value={{birthdate}} disabled required/>
+		  {{else}}
+			<input class="form-control linked" data-date data-min-date="1970/01/01" data-max-date="2000/08/21" data-start-date="1999/01/01" name="student-birthdate" type="text" required autocomplete="off" />
+		  {{/if}}
         </div>
 
         <div class="form-group">
