--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -38,6 +38,7 @@
                 <div class="col-xs-12">
                     <div class="row padding-top">
                         <a href="/courses/add" class="btn btn-add btn-primary">Kurs anlegen</a>
+                        <a class="btn btn-add btn-secondary btn-import-course">Kurs importieren</a>
                     </div>
                 </div>
                 {{/userHasPermission}}
@@ -51,6 +52,12 @@
                             <div id='course-edit'></div>
                         {{/userHasPermission}}
                     </div>
+                {{/content}}
+            {{/embed}}
+
+            {{#embed "lib/components/modal-form" class="import-modal"}}
+                {{#content "fields"}}
+                    {{> "courses/forms/form-import-course"}}
                 {{/content}}
             {{/embed}}
 
